# gilman-aurora-archive

./: PROMPT.md  QUICKSTART.md  README.md  config.yml  pyproject.toml  pytest.ini  run_tests.py
src/: __init__.py  config.py  file_processor.py  html_generator.py  main.py  utils.py  weather_fetcher.py
src/test/: README.md  conftest.py  test_config.py  test_file_processor.py  test_html_generator.py  test_utils.py  test_weather_fetcher.py
static/css/: style.css
static/js/: scripts.js
templates/: index.html
