[project]
name = "gilman-skywatch-archive"
version = "0.1.0"
description = "Static HTML website generator for Gilman, WI Aurora timelapse archive"
authors = [{name = "Gilman Skywatch", email = "admin@gilman-skywatch.local"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "click>=8.1.0",
    "astral>=2.2",
    "PyYAML>=6.0",
    "astroplan>=0.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
gilman-skywatch = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
